# bazel-total

./: README.md
nodejs/01_my_workspace/: BUILD.bazel  WORKSPACE.bazel  app.js  app.spec.js  es5.babelrc  index.html  package-lock.json  package.json
nodejs/02_my_workspace/: BUILD.bazel  package.json
nodejs/03_my_workspace/: BUILD.bazel  WORKSPACE  index.ts  package.json
